Edit-mode undo/redo causes assertion #85974

Closed
opened 2021-02-25 04:54:34 +01:00 by Campbell Barton · 4 comments

Currently, undo/redo can cause an assert, I've included a test case.

BLI_assert failed: source/blender/editors/mesh/editmesh_undo.c:781, mesh_undosys_step_decode(), at 'mesh_undosys_poll(C)'

With this test, there is an assertion: P1989

To run the test:

../lib/tests/ui_simulate/run.py --blender='./blender.bin --log "ed.undo.*" --log-level 1' --tests "test_undo.view3d_mesh_edit_mode_switch_issue"

Reporting for reference.

Currently, undo/redo can cause an assert, I've included a test case. `BLI_assert failed: source/blender/editors/mesh/editmesh_undo.c:781, mesh_undosys_step_decode(), at 'mesh_undosys_poll(C)'` With this test, there is an assertion: [P1989](https://archive.blender.org/developer/P1989.txt) To run the test: ``` ../lib/tests/ui_simulate/run.py --blender='./blender.bin --log "ed.undo.*" --log-level 1' --tests "test_undo.view3d_mesh_edit_mode_switch_issue" ``` ---- Reporting for reference.
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by e301f3422d

This issue was referenced by e301f3422d9922598e0cabf12a4e22eda0ae0880
Author
Owner

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2021-02-25 06:15:16 +01:00

This issue was referenced by 76cc8e8436

This issue was referenced by 76cc8e8436875c1c700d6a7d29d3cffeddc04c7d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85974
No description provided.