Fix T85974: Edit-mode undo/redo causes assertion

Assert the poll function succeeds after setting the active object.