source/blender/editors/curve/editcurve_undo.c
@@ -36,6 +36,7 @@
 #include "BKE_fcurve.h"
 #include "BKE_layer.h"
 #include "BKE_main.h"
+#include "BKE_object.h"
 #include "BKE_undo_system.h"
 
 #include "DEG_depsgraph.h"
@@ -251,7 +252,7 @@ static void curve_undosys_step_decode(struct bContext *C,
   ED_undo_object_editmode_restore_helper(
       C, &us->elems[0].obedit_ref.ptr, us->elems_len, sizeof(*us->elems));
 
-  BLI_assert(curve_undosys_poll(C));
+  BLI_assert(BKE_object_is_in_editmode(us->elems[0].obedit_ref.ptr));
 
   for (uint i = 0; i < us->elems_len; i++) {
     CurveUndoStep_Elem *elem = &us->elems[i];
@@ -273,6 +274,9 @@ static void curve_undosys_step_decode(struct bContext *C,
   /* The first element is always active */
   ED_undo_object_set_active_or_warn(
       CTX_data_view_layer(C), us->elems[0].obedit_ref.ptr, us_p->name, &LOG);
+
+  /* Check after setting active. */
+  BLI_assert(curve_undosys_poll(C));
 
   bmain->is_memfile_undo_flush_needed = true;
 
